gccida/g1/c_add_case_label
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3803:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3804:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3805:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3808:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3809:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3810:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3811:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3813:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3814:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3815:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3818:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *duplicatea; // [rsp+8h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3886:20: error: expected expression
v23 = ( tree_node *)splay_tree_lookup( cases, ( splay_tree_key)low_value); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3886:9: error: use of undeclared identifier 'tree_node'
v23 = ( tree_node *)splay_tree_lookup( cases, ( splay_tree_key)low_value); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3916:29: error: expected expression
duplicatea = *( tree_node **)( low_bound->value + 48); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3916:17: error: use of undeclared identifier 'tree_node'
duplicatea = *( tree_node **)( low_bound->value + 48); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3947:27: error: expected expression
|| ( v21 = *( tree_node **)( v20->value + 40)) == 0LL 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/c-common.c:3947:15: error: use of undeclared identifier 'tree_node'
|| ( v21 = *( tree_node **)( v20->value + 40)) == 0LL 
              ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_add_case_label/src/obj/c-common.o] Error 1
